--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,66 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Novecento';
+  src: url('./assets/fonts/Novecentosanswide-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Novecento';
+  src: url('./assets/fonts/Novecentosanswide-Normal.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Novecento';
+  src: url('./assets/fonts/Novecentosanswide-DemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+body {
+  @apply font-sans;
+}
+
+svg.wave-animated path {
+  animation: oceanWave 7s linear infinite;
+}
+
+svg.wave-animated path:nth-child(2) {
+  animation-delay: 1s;
+}
+svg.wave-animated path:nth-child(3) {
+  animation-delay: 3s;
+}
+svg.wave-animated path:nth-child(4) {
+  animation-play-state: paused;
+}
+
+@keyframes oceanWave {
+  0% {
+    d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320 500 L0 500");
+  }
+  25% {
+    d: path("M0,100 C220,100,440,292,660,292 C880,292,1100,100,1320,100 L1320 500 L0 500");
+  }
+  50% {
+    d: path("M0,192 C220,290,440,290,660,192 C880,100,1100,100,1320,192 L1320 500 L0 500");
+  }
+  75% {
+    d: path("M0,292 C220,292,440,100,660,100 C880,100,1100,292,1320,292 L1320 500 L0 500");
+  }
+  100% {
+    d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320 500 L0 500");
+  }
+}
+
+
