--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,4 +81,15 @@ svg.wave-animated path:nth-child(4) {
   }
 }
 
+.article-html table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 0.7em;
+}
+
+.article-html th, .article-html td {
+  padding: 0.7em 1.2em;
+  text-align: left;
+  vertical-align: top;
+}
 
